# gerust

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs  renovate.json  renovate.json5
.github/workflows/: build.yml  ci.yml  gravity.yml  release.yml
blueprint/: .env.liquid  Cargo.toml.liquid  Dockerfile  Dockerfile.liquid  README.md.liquid  cargo-generate.toml  docker-compose.yml  rust-toolchain.toml
blueprint/.cargo/: config.toml
blueprint/.github/workflows/: ci.yml.liquid
blueprint/cli/: Cargo.toml.liquid  README.md.liquid
blueprint/cli/src/: lib.rs
blueprint/config/: Cargo.toml.liquid  README.md.liquid
blueprint/config/environments/: production.toml
blueprint/config/src/: lib.rs.liquid
blueprint/db/: Cargo.toml.liquid  README.md  seeds.sql.liquid
blueprint/db/src/: lib.rs
blueprint/macros/: Cargo.toml.liquid  README.md.liquid
blueprint/macros/src/: lib.rs.liquid
blueprint/web/: Cargo.toml.liquid  README.md.liquid
blueprint/web/src/: error.rs.liquid  lib.rs  main.rs  routes.rs.liquid  state.rs.liquid
blueprints/default/: cargo-generate.toml
blueprints/default/cli/: Cargo.toml
blueprints/default/db/: Cargo.toml
blueprints/default/web/: Cargo.toml
blueprints/default/web/src/: lib.rs  state.rs
blueprints/default/web/tests/common/: mod.rs
blueprints/full/.cargo/: config.toml
blueprints/full/db/: Cargo.toml
blueprints/full/db/src/: lib.rs
blueprints/full/db/src/entities/: task.rs  tasks.rs  user.rs  users.rs
blueprints/full/db/src/test_helpers/: users.rs
blueprints/full/web/: Cargo.toml
blueprints/full/web/src/: lib.rs  routes.rs  state.rs
blueprints/full/web/src/controllers/: tasks.rs
blueprints/full/web/src/middlewares/: auth.rs
blueprints/full/web/tests/: tasks_test.rs
blueprints/full/web/tests/common/: mod.rs
blueprints/full/workers/: main.rs  worker.rs
blueprints/minimal/web/: Cargo.toml
blueprints/minimal/web/src/: lib.rs  state.rs
docs/: docusaurus.config.ts
pacesetter/: Cargo.toml
pacesetter-cli/: Cargo.toml  build.rs
pacesetter-cli/blueprint/: .env.liquid  .env.test.liquid  Cargo.toml.liquid  cargo-generate.toml  docker-compose.yml
pacesetter-cli/blueprint/cli/: Cargo.toml.liquid
pacesetter-cli/blueprint/cli/src/util/: mod.rs
pacesetter-cli/blueprint/config/: Cargo.toml.liquid
pacesetter-cli/blueprint/config/src/: lib.rs.liquid
pacesetter-cli/blueprint/db/: Cargo.toml.liquid
pacesetter-cli/blueprint/db/src/entities/: mod.rs.liquid
pacesetter-cli/blueprint/db/src/test_helpers/: mod.rs.liquid
pacesetter-cli/blueprint/macros/src/: lib.rs
pacesetter-cli/blueprint/web/: Cargo.toml.liquid
pacesetter-cli/blueprint/web/src/: lib.rs  state.rs.liquid
pacesetter-cli/blueprint/web/src/controllers/: tasks.rs
pacesetter-cli/blueprint/web/src/middlewares/: mod.rs.liquid
pacesetter-cli/blueprint/web/tests/api/: common.rs.liquid  greeting_test.rs  main.rs.liquid  tasks_test.rs
pacesetter-cli/blueprints/default/: .env  .env.test
pacesetter-cli/blueprints/default/config/: app.toml
pacesetter-cli/blueprints/default/config/src/: lib.rs
pacesetter-cli/blueprints/default/db/src/: lib.rs
pacesetter-cli/blueprints/default/web/: Cargo.toml
pacesetter-cli/blueprints/default/web/src/: main.rs  routes.rs
pacesetter-cli/blueprints/full/: .env
pacesetter-cli/blueprints/full/db/: Cargo.toml
pacesetter-cli/blueprints/full/db/src/entities/: mod.rs  users.rs
pacesetter-cli/blueprints/full/web/src/: routes.rs
pacesetter-cli/blueprints/full/web/src/controllers/: tasks.rs
pacesetter-cli/blueprints/full/web/tests/: tasks_test.rs
pacesetter-cli/blueprints/full/web/tests/common/: mod.rs
pacesetter-cli/blueprints/minimal/.github/workflows/: ci.yml
pacesetter-cli/blueprints/minimal/config/src/: lib.rs
pacesetter-cli/blueprints/minimal/web/src/: lib.rs
pacesetter-cli/blueprints/minimal/web/tests/common/: mod.rs
pacesetter-cli/src/: main.rs
pacesetter-cli/tests/: ui_test.rs
pacesetter-cli/tests/snapshots/: ui_test__no_color-2.snap
pacesetter-procs/: Cargo.toml
pacesetter-procs/src/: lib.rs
pacesetter-util/: Cargo.toml
pacesetter-util/src/: ui.rs
pacesetter-util/tests/: ui_test.rs
pacesetter-util/tests/snapshots/: ui_test__color-2.snap  ui_test__indentation.snap  ui_test__no_color.snap
pacesetter/src/: config.rs  lib.rs  util.rs  web.rs
pacesetter/src/cli/: db.rs  generate.rs  mod.rs  ui.rs  util.rs
pacesetter/src/cli/generate/: mod.rs
pacesetter/src/cli/generate/blueprints/controller/crud/: controller.rs.liquid  test.rs.liquid
pacesetter/src/cli/generate/blueprints/controller/minimal/: controller.rs.liquid  test.rs.liquid
pacesetter/src/cli/generate/blueprints/entity/: file.rs.liquid
pacesetter/src/cli/generate/blueprints/entity-test-helper/: file.rs.liquid
pacesetter/src/test/: helpers.rs  mod.rs
site/: .prettierignore  README.md  docusaurus.config.ts  package.json  pnpm-lock.yaml
site/docs/: index.md
site/docs/architecture/: index.md  the-cli-crate.md  the-config-crate.md  the-db-crate.md  the-macros-crate.md  the-web-crate.md
site/docs/tutorial-extras/: translate-your-site.md
site/docs/tutorial-full/: _category_.json  index.md
site/docs/tutorial-minimal/: _category_.json  application-state.md  index.md  middleware.md  new-endpoint.md  new-middleware.md
site/docs/tutorial-standard/: auth-middleware.md  index.md  reading-endpoints.md  the-entity.md  writing-endpoints.md
site/src/: prism-theme.ts
site/src/css/: custom.css
site/src/pages/: index.module.css  index.tsx
src/: lib.rs  main.rs
src/ui/: mod.rs
src/ui/snapshots/: pace__ui__tests__color-2.snap  pace__ui__tests__color.snap  pace__ui__tests__indentation.snap  (+2 more)
template/: .env.test  Cargo.toml
template/cli/: Cargo.toml
template/config/: Cargo.toml
template/web/: Cargo.toml
template/web/src/: lib.rs  main.rs  routes.rs
template/web/src/controllers/: example.rs
template/web/tests/: example_test.rs
template/web/tests/common/: mod.rs
templates/minimal/: .gitignore  Cargo.toml
tests/: ui_test.rs
tests/snapshots/: ui_test__color.snap
(+51 files in other folders)
