[package]
name = "pacesetter"
version = "0.0.1"
edition = "2021"
authors = ["Marco Otte-Witte <marco.otte-witte@mainmatter.com>"]
description = "CLI for Meta-framework on top of axum"
license = "MIT"
include = ["blueprints", "src", "build.rs"]

[[bin]]
name = "pace"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.4", features = ["cargo"] }
cargo-generate = "0.22.0"
include_dir = "0.7"
tokio = { version = "1.34", features = ["full"] }

[dev-dependencies]
insta = "1.38"

[build-dependencies]
vergen = { version = "8.3.2", features = ["build", "git", "gitcl"] }
