[package]
name = "gerust"
version = "0.0.3"
edition = "2021"
authors = ["Marco Otte-Witte <marco.otte-witte@mainmatter.com>"]
description = "Gerust takes care of the accidental complexity of Rust backend projects so you can stay focused on what matters."
categories = ["web-programming"]
keywords = ["backend", "axum"]
homepage = "https://gerust.rs"
repository = "https://github.com/mainmatter/gerust"
license = "MIT"
include = ["blueprint", "src", "build.rs"]
exclude = ["site"]

[[bin]]
name = "gerust"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.4", features = ["cargo"] }
cargo-generate = "0.22.0"
include_dir = "0.7"
tokio = { version = "1.34", features = ["full"] }

[dev-dependencies]
insta = "1.38"

[build-dependencies]
vergen = { version = "9.0.2", features = ["build"] }
vergen-git2 = { version = "1.0.2", features = ["build"] }
