[package]
name = "gerust"
version = "0.0.6"
edition = "2024"
authors = ["Marco Otte-Witte <marco.otte-witte@mainmatter.com>"]
description = "Gerust takes care of the accidental complexity of Rust backend projects so you can stay focused on what matters."
categories = ["web-programming"]
keywords = ["backend", "axum"]
homepage = "https://gerust.rs"
repository = "https://github.com/mainmatter/gerust"
license = "MIT"
include = ["blueprint", "src", "build.rs"]
exclude = ["site"]

[[bin]]
name = "gerust"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["cargo"] }
cargo-generate = "0.23.5"
include_dir = "0.7"
tokio = { version = "1.48", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }

[dev-dependencies]
insta = "1.43"

[build-dependencies]
vergen = { version = "9.0.6", features = ["build"] }
vergen-git2 = { version = "1.0.7", features = ["build"] }

[profile.release]
lto = true
