[package]
name = "pacesetter-cli"
version = "0.0.1"
edition = "2021"
authors = ["Marco Otte-Witte <marco.otte-witte@mainmatter.com>"]
description = "CLI for Meta-framework on top of axum"
license = "MIT"

[[bin]]
name = "pace"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.4", features = ["cargo"] }
cargo-generate = "0.18"
include_dir = "0.7"
tokio = { version = "1.34", features = ["full"] }

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "git", "gitcl"] }
