[package]
name = "pacesetter-cli"
version = "0.0.1"
edition = "2021"
authors = ["Marco Otte-Witte <marco.otte-witte@mainmatter.com>"]
description = "CLI for Meta-framework on top of axum"
license = "MIT"
include = ["blueprints", "src", "build.rs"]

[[bin]]
name = "pace"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.4", features = ["cargo"] }
cargo-generate = "0.19.0"
include_dir = "0.7"
pacesetter-util = { path = "../pacesetter-util" }
tokio = { version = "1.34", features = ["full"] }

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "git", "gitcl"] }
