[package]
name = "pacesetter-procs"
version = "0.0.1"
edition = "2021"
authors = ["Marco Otte-Witte <marco.otte-witte@mainmatter.com>"]
description = "Meta-framework on top of axum"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = {  version = "2.0", features = ["full"] }
