[package]
name = "pacesetter"
version = "0.0.1"
edition = "2021"
authors = ["Marco Otte-Witte <marco.otte-witte@mainmatter.com>"]
description = "Meta-framework on top of axum"
license = "MIT"

[lib]
doctest = false

[dependencies]
anyhow = "1"
axum = "0.7"
clap = { version = "4.4", features = ["derive"] }
cruet = "0.14"
dotenvy = "0.15"
figment = { version = "0.10", features = ["toml", "env"] }
guppy = "0.17"
include_dir = "0.7"
liquid = "~0.26"
liquid-core = "~0.26"
liquid-lib = "~0.26"
liquid-derive = "~0.26"
rand = "0.8"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"
tokio = { version = "1.34", features = ["full"] }
pacesetter-util = { path = "../pacesetter-util" }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres", "migrate" ] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["full"] }
tracing = "0.1"
tracing-panic = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "fmt"] }
url = "2.5"
validator = { version = "0.16", features = ["derive"] }

[dev-dependencies]
figment = { version = "0.10", features = ["toml", "env", "test"] }
hyper = { version = "1.0", features = ["full"] }

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "git", "gitcl"] }
