[package]
name = "pacesetter"
version = "0.0.1"
edition = "2021"
authors = ["Marco Otte-Witte <marco.otte-witte@mainmatter.com>"]
description = "Meta-framework on top of axum"
license = "MIT"

[lib]
doctest = false

[features]
default = []
cli = ["clap", "pacesetter-util", "include_dir", "cruet", "guppy", "liquid"]

[dependencies]
# Config
figment = { version = "0.10", features = ["toml", "env"] }
dotenvy = "0.15"
anyhow = "1"

# Tracing
tracing = "0.1"
tracing-panic = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "fmt"] }

axum = "0.7"

# Cli
pacesetter-util = { path = "../pacesetter-util", optional = true }
clap = { version = "4.4", features = ["derive"], optional = true }
include_dir = { version = "0.7", optional = true }
cruet = { version = "0.14", optional = true }
guppy = { version = "0.17", optional = true }
liquid = { version = "~0.26", optional = true }

rand = "0.8"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"
tokio = { version = "1.34", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres", "migrate" ] }
tower = { version = "0.4", features = ["util"] }
url = "2.5"
validator = { version = "0.16", features = ["derive"] }

[dev-dependencies]
figment = { version = "0.10", features = ["toml", "env", "test"] }
hyper = { version = "1.0", features = ["full"] }

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "git", "gitcl"] }
