[package]
name = "{{project-name}}-web"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
axum = "0.7"
pacesetter = { workspace = true }
rand = "0.8"
{{project-name}}-config = { path = "../config" }
{{project-name}}-db = { path = "../db" }
serde = { version = "1.0", features = ["derive"] } 
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres", "macros", "migrate", "chrono" ] }
tokio = { version = "1.34", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
serde_json = "1.0"
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1.0", features = ["full"] }
{% if use_local_pacesetter_procs -%}
pacesetter-procs = { path = "{{use_local_pacesetter_procs}}" }
{%- else -%}
pacesetter-procs = "0.0.1"
{%- endif %}
