[package]
name = "{{project-name}}-db"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres", "macros", "uuid", "migrate", "chrono" ] }
uuid = { version = "1.5", features = ["serde"] }
