[package]
name = "{{project-name}}-db"
version = "0.1.0"
edition = "2021"
publish = false

[features]
test-helpers = []

[dependencies]
anyhow = "1.0"
pacesetter = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres", "macros", "uuid", "chrono" ] }
thiserror = "1.0"
uuid = { version = "1.5", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }
